Logica para editar la cuenta por parte del back, se crea un objeto DTO para ello, y se crea el endpoint en el contoller
