# PrASeguRed/src/main/java/co/edu/uniquindio/prasegured/dto/ActualizacionCuentaDTO.java
@@ -1,0 +1,63 @@
+package co.edu.uniquindio.prasegured.dto;
+
+public class ActualizacionCuentaDTO {
+    private String nombreCom;
+    private String ciudadResidencia;
+    private String direccion;
+    private String telefono;
+    private String correo;
+    private String preferencias;
+
+    // Constructor
+    public ActualizacionCuentaDTO() {
+    }
+
+    // Getters and Setters
+    public String getNombreCom() {
+        return nombreCom;
+    }
+
+    public void setNombreCom(String nombreCom) {
+        this.nombreCom = nombreCom;
+    }
+
+    public String getCiudadResidencia() {
+        return ciudadResidencia;
+    }
+
+    public void setCiudadResidencia(String ciudadResidencia) {
+        this.ciudadResidencia = ciudadResidencia;
+    }
+
+    public String getDireccion() {
+        return direccion;
+    }
+
+    public void setDireccion(String direccion) {
+        this.direccion = direccion;
+    }
+
+    public String getTelefono() {
+        return telefono;
+    }
+
+    public void setTelefono(String telefono) {
+        this.telefono = telefono;
+    }
+
+    public String getCorreo() {
+        return correo;
+    }
+
+    public void setCorreo(String correo) {
+        this.correo = correo;
+    }
+
+    public String getPreferencias() {
+        return preferencias;
+    }
+
+    public void setPreferencias(String preferencias) {
+        this.preferencias = preferencias;
+    }
+}
